--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/src/css/style.min.css">
 
 
     <title>SoftFormance | Trial task</title>
@@ -74,10 +74,9 @@
                                             class="marked">Fotografen365</span></p>
                                 </div>
                             </div>
-                            <!-- <div class="slide__image testimonial-item__image"> -->
-                            <img class="slide__image testimonial-item__image" src="./images/testimonial_img1.jpg"
+
+                            <img class="slide__image testimonial-item__image" src="./src/images/testimonial_img1.jpg"
                                 alt="slider image" width="582" height="597" />
-                            <!-- </div> -->
                         </div>
                     </div>
                     <div class="slider__controls">
