--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header class="header">
         <div class="container">
-            <a class="logo" href="./">
+            <a class="logo" href="./" aria-label="SoftFormance logo, go to homepage">
                 <svg width="99" height="60" viewBox="0 0 99 60" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_765_6)">
                         <path
@@ -80,13 +80,15 @@
                         </div>
                     </div>
                     <div class="slider__controls">
-                        <div class="slider__control-btn slider__control-btn--disabled prev"><svg width="10" height="17"
-                                viewBox="0 0 10 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <div class="slider__control-btn slider__control-btn--disabled prev"
+                            aria-label="Show previous testimonial">
+                            <svg width="10" height="17" viewBox="0 0 10 17" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
                                 <path d="M8.42944 15.9434L1.41784 8.93176L8.42944 1.90007" stroke="white"
                                     stroke-width="1.96325" stroke-linecap="round" stroke-linejoin="round" />
                             </svg>
                         </div>
-                        <div class="slider__control-btn next">
+                        <div class="slider__control-btn next" aria-label="Show next testimonial">
                             <svg width="10" height="17" viewBox="0 0 10 17" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path d="M1.41699 1.8999L8.42859 8.9115L1.41699 15.9432" stroke="white"
@@ -103,7 +105,8 @@
                     happily add it to our
                     testimonials page.
                     Thank you!</p>
-                <button type="button" class="button button--main leave-comment-btn">Leave your feedback</button>
+                <button type="button" class="button button--main leave-comment-btn"
+                    aria-label="Button to leave your feedback">Leave your feedback</button>
             </div>
         </section>
     </main>
